--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     size="medium"
     color="#fff"
     type="ball-scale-multiple">
-    <p style="font-size: 20px; color: white">Loading...</p>
+    <p style="font-size: 20px; color: white">Searching...</p>
   </ngx-spinner>
   <div class="row">
     <div class="col-md-12">
