--- a/src/app/bot-home-screen/bot-home-screen.component.html
+++ b/src/app/bot-home-screen/bot-home-screen.component.html
@@ -13,7 +13,7 @@
       <div class="panel-heading">Answer</div>
       <div class="panel-body">
         <ul class="list-group" *ngFor="let ans of answers">
-          <li class="list-group-item"><p>{{ans.answer}}</p></li>
+          <li class="list-group-item"><p style="white-space: pre-line">{{ans.answer}}</p></li>
           <br>
           <div>
             <span (click)="sendLike(ans, searchValue)">
