--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <a class="navbar-brand" href="#">
-    <div> Bot POC</div>
+    <div> Allianz Bot</div>
   <span>Answer to all your question</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -8,12 +8,44 @@
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Person Profile</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Training</a>
+        <ul class='dropdown-menu'>
+          <li class = 'dropdown-submenu'>
+            <a tabindex='-1' href='#'>
+              <span class = 'glyphicon glyphicon-cog'> </span> Testing
+            </a>
+            <ul class='dropdown-menu' role = 'menu'>
+              <li><a tabindex='-1' href='#'> TOSCA </a></li>
+              <li role='separator' class='divider'></li>
+              <li><a tabindex='-1' href='#'> Smoke Test </a></li>
+              <li role='separator' class='divider'></li>
+              <li><a tabindex='-1' href='#'> Selenium </a></li>
+            </ul>
+          </li>
+          <li role='separator' class='divider'></li>
+          <li class = 'dropdown-submenu'>
+            <a tabindex='-1' href='#'>
+              <span class = 'glyphicon glyphicon-list-alt'> </span> ABS Rich Client
+            </a>
+            <ul class='dropdown-menu' role = 'menu'>
+              <li><a tabindex='-1' href='#'> View Layer </a></li>
+              <li role='separator' class='divider'></li>
+              <li><a tabindex='-1' href='#'> Dialog Layer </a></li>
+              <li role='separator' class='divider'></li>
+              <li><a tabindex='-1' href='#'> Business Layer </a></li>
+              <li role='separator' class='divider'></li>
+              <li><a tabindex='-1' href='#'> Persistence Layer </a></li>
+            </ul>
+          </li>
+          <li role='separator' class='divider'></li>
+          <li><a href='#'><span class='glyphicon glyphicon-list-alt'> </span>  CISL </a></li>
+        </ul>
       </li>
-      <li class="nav-item">
+     <!-- <li class="nav-item">
         <a class="nav-link" href="#">Allianz news</a>
-      </li>
+      </li>-->
+
     </ul>
   </div>
 </nav>
