New Pages Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,12 @@
   </ngx-spinner>
   <div class="row">
     <div class="col-md-12">
-      <app-bot-home-screen></app-bot-home-screen>
+     <!-- <app-bot-home-screen></app-bot-home-screen>-->
+      <router-outlet></router-outlet>
     </div>
   </div>
+
+
   <!--<br>
   <div class="row">
     <div class="col-md-12">
