--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="/home">
     <div> Allianz Bot</div>
-  <span>Answer to all your question</span>
+    <span>Answer to all your question</span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -9,13 +9,14 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Training</a>
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+           aria-expanded="false">Training</a>
         <ul class='dropdown-menu'>
-          <li class = 'dropdown-submenu'>
+          <li class='dropdown-submenu'>
             <a tabindex='-1' href='#'>
-              <span class = 'glyphicon glyphicon-cog'> </span> Testing
+              <span class='glyphicon glyphicon-cog'></span> Testing
             </a>
-            <ul class='dropdown-menu' role = 'menu'>
+            <ul class='dropdown-menu' role='menu'>
               <li><a tabindex='-1' href='#'> TOSCA </a></li>
               <li role='separator' class='divider'></li>
               <li><a tabindex='-1' href='#'> Smoke Test </a></li>
@@ -24,11 +25,11 @@
             </ul>
           </li>
           <li role='separator' class='divider'></li>
-          <li class = 'dropdown-submenu'>
+          <li class='dropdown-submenu'>
             <a tabindex='-1' href='#'>
-              <span class = 'glyphicon glyphicon-list-alt'> </span> ABS Rich Client
+              <span class='glyphicon glyphicon-list-alt'></span> ABS Rich Client
             </a>
-            <ul class='dropdown-menu' role = 'menu'>
+            <ul class='dropdown-menu' role='menu'>
               <li><a tabindex='-1' href='#'> View Layer </a></li>
               <li role='separator' class='divider'></li>
               <li><a tabindex='-1' href='#'> Dialog Layer </a></li>
@@ -39,12 +40,12 @@
             </ul>
           </li>
           <li role='separator' class='divider'></li>
-          <li><a href='#'><span class='glyphicon glyphicon-list-alt'> </span>  CISL </a></li>
+          <li><a href='#'><span class='glyphicon glyphicon-list-alt'></span> CISL </a></li>
         </ul>
       </li>
-     <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Allianz news</a>
-      </li>-->
+      <!-- <li class="nav-item">
+         <a class="nav-link" href="#">Allianz news</a>
+       </li>-->
 
     </ul>
   </div>
