question answer immplementation

--- a/src/app/bot-header-screen/header.component.html
+++ b/src/app/bot-header-screen/header.component.html
@@ -17,11 +17,11 @@
               <span class='glyphicon glyphicon-cog'></span> Testing
             </a>
             <ul class='dropdown-menu' role='menu'>
-              <li><a tabindex='-1' href='#'> TOSCA </a></li>
+              <li><a tabindex='-1' href='/training/TOSCA'> TOSCA </a></li>
               <li role='separator' class='divider'></li>
-              <li><a tabindex='-1' href='#'> Smoke Test </a></li>
+              <li><a tabindex='-1' href='/training/Smoke Test'> Smoke Test </a></li>
               <li role='separator' class='divider'></li>
-              <li><a tabindex='-1' href='#'> Selenium </a></li>
+              <li><a tabindex='-1' href='/training/Selenium'> Selenium </a></li>
             </ul>
           </li>
           <li role='separator' class='divider'></li>
