--- a/src/app/bot-header-screen/header.component.html
+++ b/src/app/bot-header-screen/header.component.html
@@ -21,7 +21,7 @@
               <li role='separator' class='divider'></li>
               <li><a tabindex='-1' href='/training/Smoke Test'> Smoke Test </a></li>
               <li role='separator' class='divider'></li>
-              <li><a tabindex='-1' href='/training/Selenium'> Selenium </a></li>
+              <li><a tabindex='-1' href='/training/dummy'> Selenium </a></li>
             </ul>
           </li>
           <li role='separator' class='divider'></li>
