--- a/src/app/bot-assesment-result-screen/bot-assesment-result-screen.component.html
+++ b/src/app/bot-assesment-result-screen/bot-assesment-result-screen.component.html
@@ -1,3 +1,18 @@
-<p>
-  bot-assesment-result-screen works!
-</p>
+<!-- <h1 class="mat-display-1">Score: {{allianzBotExam.score}}</h1>
+<h2 class="mat-h2">Exam Finished at: {{allianzBotExam.finishTime.dayOfMonth}}/{{allianzBotExam.finishTime.monthValue}}/{{allianzBotExam.finishTime.year}} {{allianzBotExam.finishTime.hour}}:{{allianzBotExam.finishTime.minute}}:{{allianzBotExam.finishTime.second}}</h2> -->
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Score Card</mat-card-title>
+    <mat-card-subtitle>{{allianzBotExam.user}}</mat-card-subtitle>
+  </mat-card-header> 
+
+  <mat-card-content>
+    <h1 class="mat-display-1">Score: {{allianzBotExam.score}}</h1>
+    <h2 class="mat-h2">Exam Finished at: {{allianzBotExam.finishTime.dayOfMonth}}/{{allianzBotExam.finishTime.monthValue}}/{{allianzBotExam.finishTime.year}} {{allianzBotExam.finishTime.hour}}:{{allianzBotExam.finishTime.minute}}:{{allianzBotExam.finishTime.second}}</h2>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
