--- a/src/app/bot-training-screen/bot-training-screen.component.html
+++ b/src/app/bot-training-screen/bot-training-screen.component.html
@@ -1,7 +1,6 @@
 <iframe class="doc"
         [src]="loadDocument()"></iframe>
-{{topic}}
 <p>
-  <a href="/assesment/{{topic}}" mat-stroked-button color='primary'>Initiate Assesment!</a>
+  <a href="/assesment/{{topic}}" mat-raised-button color="primary">Initiate Assesment!</a>
 </p>
 
