testcenter and topic related

--- a/src/app/bot-assesment-result-screen/bot-assesment-result-screen.component.html
+++ b/src/app/bot-assesment-result-screen/bot-assesment-result-screen.component.html
@@ -8,6 +8,7 @@
   </mat-card-header> 
 
   <mat-card-content>
+    <h1 class="mat-display-1">Topic: {{allianzBotExam.topic}}</h1>
     <h1 class="mat-display-1">Score: {{allianzBotExam.percentages}}%</h1>
     <h2 class="mat-h2">Exam Finished at: {{allianzBotExam.finishTime.dayOfMonth}}/{{allianzBotExam.finishTime.monthValue}}/{{allianzBotExam.finishTime.year}} {{allianzBotExam.finishTime.hour}}:{{allianzBotExam.finishTime.minute}}:{{allianzBotExam.finishTime.second}}</h2>
   </mat-card-content>
