--- a/src/app/bot-home-screen/bot-home-screen.component.html
+++ b/src/app/bot-home-screen/bot-home-screen.component.html
@@ -21,13 +21,13 @@
 		<mat-card style="margin-bottom: 10px;" *ngFor="let ans of answers">
 		<mat-card-content>
 		<p *ngIf="ans.answer != null" style="white-space: pre-line">{{ans.answer}}</p>
-		<p *ngIf="ans.failedCategory != null" style="white-space: pre-line">Team: {{ans.allianzBotTestCenterResponse.team}}</p>
-		<p *ngIf="ans.failedCategory != null" style="white-space: pre-line">TestCaseId: {{ans.allianzBotTestCenterResponse.testCaseId}}</p>
-		<p *ngIf="ans.failedCategory != null" style="white-space: pre-line">Execution Date: {{ans.allianzBotTestCenterResponse.executionDate}}</p>
-		<p *ngIf="ans.failedCategory != null" style="white-space: pre-line">Failed Run Count: {{ans.allianzBotTestCenterResponse.failedRunCount}}</p>
-		<p *ngIf="ans.failedCategory != null" style="white-space: pre-line">Defect Id: {{ans.allianzBotTestCenterResponse.defectIdStr}}</p>
-		<p *ngIf="ans.failedCategory != null" style="white-space: pre-line">Failed Category: {{ans.allianzBotTestCenterResponse.failedCategory}}</p>
-		<p *ngIf="ans.failedLog != null" style="white-space: pre-line">Failed Log: {{ans.allianzBotTestCenterResponse.failedLog}}</p>
+		<p *ngIf="ans.allianzBotTestCenterData.team != null" style="white-space: pre-line">Team: {{ans.allianzBotTestCenterData.team}}</p>
+		<p *ngIf="ans.allianzBotTestCenterData.testCaseId != null" style="white-space: pre-line">TestCaseId: {{ans.allianzBotTestCenterData.testCaseId}}</p>
+		<p *ngIf="ans.allianzBotTestCenterData.defectIdStr != null" style="white-space: pre-line">Defect Id: {{ans.allianzBotTestCenterData.defectIdStr}}</p>
+		<!--<p *ngIf="ans.allianzBotTestCenterData.executionDate != null" style="white-space: pre-line">Execution Date: {{ans.allianzBotTestCenterData.executionDate}}</p>-->
+		<p *ngIf="ans.allianzBotTestCenterData.failedRunCount != null" style="white-space: pre-line">Failed Run Count: {{ans.allianzBotTestCenterData.failedRunCount}}</p>
+		<p *ngIf="ans.allianzBotTestCenterData.failedCategory != null" style="white-space: pre-line">Failed Category: {{ans.allianzBotTestCenterData.failedCategory}}</p>
+		<p *ngIf="ans.allianzBotTestCenterData.failedLog != null" style="white-space: pre-line">Failed Log: {{ans.allianzBotTestCenterData.failedLog}}</p>
 		</mat-card-content> <mat-card-actions>
 		<button mat-button (click)="sendLike(ans, searchValue)">
 			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
