--- a/src/app/bot-admin-panel/bot-admin-panel.component.html
+++ b/src/app/bot-admin-panel/bot-admin-panel.component.html
@@ -3,4 +3,17 @@
 		<button mat-raised-button color="primary" (click)="loadAssesment()">Load Documents to Solr</button> &nbsp;
 		<button mat-raised-button color="primary" (click)="loadDocuments()">Load Exam to Solr</button>
 	</div>
+
+	<!-- <modal id="custom-modal-1">
+		<div class="modal">
+			<div class="modal-body">
+				<h1>A Custom Modal!</h1>
+				<p>
+					Home page text: <input type="text" [(ngModel)]="bodyText" />
+				</p>
+				<button (click)="closeModal('custom-modal-1');">Close</button>
+			</div>
+		</div>
+		<div class="modal-background"></div>
+	</modal> -->
 </div>
