--- a/src/app/bot-assesment-result-screen/bot-assesment-result-screen.component.html
+++ b/src/app/bot-assesment-result-screen/bot-assesment-result-screen.component.html
@@ -10,6 +10,7 @@
   <mat-card-content>
     <h1 class="mat-display-1">Topic: {{allianzBotExam.topic}}</h1>
     <h1 class="mat-display-1">Score: {{allianzBotExam.percentages}}%</h1>
+    <h1 class="mat-display-1">{{allianzBotExam.finalResult}}!</h1>
     <h2 class="mat-h2">Exam Finished at: {{allianzBotExam.finishTime.dayOfMonth}}/{{allianzBotExam.finishTime.monthValue}}/{{allianzBotExam.finishTime.year}} {{allianzBotExam.finishTime.hour}}:{{allianzBotExam.finishTime.minute}}:{{allianzBotExam.finishTime.second}}</h2>
   </mat-card-content>
   <!-- <mat-card-actions>
