--- a/src/app/bot-home-screen/bot-home-screen.component.html
+++ b/src/app/bot-home-screen/bot-home-screen.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+	{{updateScoreResponse.status.message}}
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-8">
@@ -17,18 +18,22 @@
 		<div class="col-md-1"></div>
 
 	</div>
-	<div *ngIf="answers.length > 0">
+	
+	<div *ngIf="answers.length > 1">
 		<mat-card style="margin-bottom: 10px;" *ngFor="let ans of answers">
 		<mat-card-content>
 		<p *ngIf="ans.answer != null" style="white-space: pre-line">{{ans.answer}}</p>
 		<span *ngIf="ans.allianzBotTestCenterData != null">
-			<p *ngIf="ans.allianzBotTestCenterData.team != null" style="white-space: pre-line">Team: {{ans.allianzBotTestCenterData.team}}</p>
-			<p *ngIf="ans.allianzBotTestCenterData.testCaseId != null" style="white-space: pre-line">TestCaseId: {{ans.allianzBotTestCenterData.testCaseId}}</p>
-			<p *ngIf="ans.allianzBotTestCenterData.defectIdStr != null" style="white-space: pre-line">Defect Id: {{ans.allianzBotTestCenterData.defectIdStr}}</p>
-			<!--<p *ngIf="ans.allianzBotTestCenterData.executionDate != null" style="white-space: pre-line">Execution Date: {{ans.allianzBotTestCenterData.executionDate}}</p>-->
-			<p *ngIf="ans.allianzBotTestCenterData.failedRunCount != null" style="white-space: pre-line">Failed Run Count: {{ans.allianzBotTestCenterData.failedRunCount}}</p>
-			<p *ngIf="ans.allianzBotTestCenterData.failedCategory != null" style="white-space: pre-line">Failed Category: {{ans.allianzBotTestCenterData.failedCategory}}</p>
-			<p *ngIf="ans.allianzBotTestCenterData.failedLog != null" style="white-space: pre-line">Failed Log: {{ans.allianzBotTestCenterData.failedLog}}</p>
+			<span >
+				<p *ngIf="ans.allianzBotTestCenterData.defectId > 0" style="white-space: pre-line">Defect Id: {{ans.allianzBotTestCenterData.defectId}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.team != null" style="white-space: pre-line">Team: {{ans.allianzBotTestCenterData.team}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.testCaseId != null" style="white-space: pre-line">TestCaseId: {{ans.allianzBotTestCenterData.testCaseId}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.defectIdStr != null" style="white-space: pre-line">Defect Id: {{ans.allianzBotTestCenterData.defectIdStr}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.failedRunCount != null" style="white-space: pre-line">Failed Run Count: {{ans.allianzBotTestCenterData.failedRunCount}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.failureCategory != null" style="white-space: pre-line">Failed Category: {{ans.allianzBotTestCenterData.failureCategory}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.failedLog != null" style="white-space: pre-line">Failed Log: {{ans.allianzBotTestCenterData.failedLog}}</p>
+				<p *ngIf="ans.allianzBotTestCenterData.errorCount != null" style="white-space: pre-line">{{ans.allianzBotTestCenterData.errorCount}} Build Fails because of this Error.</p>
+			</span>
 		</span>	
 	</mat-card-content> <mat-card-actions>
 		<button mat-button (click)="sendLike(ans, searchValue)">
