Login Screen Added

--- a/src/app/bot-home-screen/bot-home-screen.component.html
+++ b/src/app/bot-home-screen/bot-home-screen.component.html
@@ -53,7 +53,7 @@
 			DISLIKE
 		</button>
 		</mat-card-actions> </mat-card>
-		<div class="row">
+		<div class="row bold">
 				<div class="col-md-3"></div>
 				<div class="col-md-8">
 					<!-- pager -->
